syntax = "proto3";


package common;

option go_package = "github.com/webmin7761/go-school/homework/final/api/common/v1;common";

enum PassageTypes {
    PT = 0;
    ADT = 1;    //成人
    CHD = 2;    //儿童
    INF = 3;    //婴儿
}

enum ServiceLevel {
    SL = 0;
    First = 1;  //头等
    Business = 2;   //公务
    Economy = 3;    //经济
}

message Result {
    //0 - 成功，其它 - 失败
    string code = 1;
    //失败信息
    string message = 2;
}